--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "precommit": "lint-staged",
+    "precommit": "yarn setup-structure; lint-staged",
     "prepush": "yarn danger local",
     "setup-structure": "ts-node --skip-project scripts/create-readmes.ts; git add ."
   },
