--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "devDependencies": {
     "@types/node": "^14.14.16",
-    "danger": "^10.5.4",
-    "doctoc": "^2.0.1",
+    "doctoc": "^1.3.1",
     "glob": "^7.1.6",
     "husky": "^4.3.6",
+    "jsonpointer": ">=5.0.0",
     "lint-staged": "^10.5.3",
     "markdown-yaml-metadata-parser": "^2.1.2",
     "prettier": "^2.2.1",
+    "semver-regex": ">=3.1.3",
+    "trim": ">=0.0.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
   "scripts": {
     "precommit": "yarn setup-structure; lint-staged",
-    "prepush": "yarn danger local",
     "setup-structure": "ts-node --skip-project scripts/create-readmes.ts; git add ."
   },
   "lint-staged": {
